--- a/Font-end/public/index.html
+++ b/Font-end/public/index.html
@@ -26,6 +26,9 @@
 <script src="https://kit.fontawesome.com/7d9bb2077c.js" crossorigin="anonymous"></script>
 <!-- SweetAlert -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <!--  -->
 
 </html>
